- Rev 15- [2006/07/11] - Tsusai - Overview : Forgot to SVN add SQL.pas -

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+- Rev 15-
+[2006/07/11] - Tsusai - Overview : Forgot to SVN add SQL.pas
+-
+
 - Rev 14-
 [2006/07/11] - Tsusai - Overview : Character server work
 [2006/07/11] - Tsusai - SQL : Added.  Get and Set integer and string utilites.
