--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+- Rev 17-
+[2006/08/06] - Tsusai - SaveDB: Removed.
+[2006/08/06] - Tsusai - Notes\About running on linux.txt - Added (basically need zlib package installed).
+[2006/08/06] - Tsusai - Globals : Retrieves mySQL connection details from ServerOptions.  Tells how many accounts  and characters there are on the server.
+[2006/08/06] - Tsusai - ServerOptions : Added mySQL information loading and saving.
+[2006/08/06] - Tsusai - Console : Removed SaveDB call.
+-
+
 - Rev 16-
 [2006/08/05] - Tsusai - Overview : Character Server Fully Implemented...Big, because partial sucks.
 [2006/08/05] - Tsusai - GameGlobals : Added.
